--- a/learning_journal/mockups/selena/new.html
+++ b/learning_journal/mockups/selena/new.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>vimpy technical blog</title>
-    <link rel="stylesheet" href="../static/pstyle.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
@@ -12,14 +12,15 @@
             <nav>
                 <ul>
                     <li><a href="index.html" title="Home">Home</a></li>
-                    <li><a href="new_entry.html" title="New Entry">New Entry</a></li>
+                    <li><a href="new.html" title="New Entry">New Entry</a></li>
                 </ul>
             </nav>
             <h1>VimPY</h1>    
             <h2>Python, Vi, and other technical musings.</h2>
         </header>
-        {% block content %}
-        {% endblock content %}
+        <section id="new-entry">
+            
+        </section>
     </div>
     <footer>
         <a id=citation href='http://www.freepik.com/free-vector/green-abstract-background_774104.htm'>Designed by Freepik</a>
